pod-security/subrule/restricted/restricted-exclude-capabilities/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: podsecurity-subrule-restricted-capabilities
policies:
- ../restricted-exclude-capabilities.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: podsecurity-subrule-restricted-capabilities
  resources:
  - badpod01
  result: fail
  rule: restricted-exempt-capabilities
- kind: Pod
  policy: podsecurity-subrule-restricted-capabilities
  resources:
  - goodpod01
  result: pass
  rule: restricted-exempt-capabilities
